--- a/css/estilos.css
+++ b/css/estilos.css
@@ -12,7 +12,7 @@ body{
 }
 .header{
     height: 100vh;/*siempre va a ocupar en el alto el 100% de la pantalla donde se encuentra parado*/
-    background-image: url(../assets/img/condicionado.png);
+    background-image: url(../assets/img/cielo.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -63,7 +63,7 @@ body{
 }
 
 .contenedorTituloheader h1{
-    font-size: 2rem;
+    font-size: 1.4rem;
     padding-top: 10px;
 }
 
@@ -106,6 +106,7 @@ body{
 .card img{
     width: 90%;
     height: 40vh;
+    object-fit: cover;
     
 }
 
