--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,99 +1,124 @@
 /*import de fuentes*/
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,400;0,700;1,200&display=swap');
-*{
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-body{
-    font-family: 'Montserrat', sans-serif;
-    background-image: linear-gradient(to right bottom, #ffffff, #dedbf3, #bcb9e7, #9798dc, #6e79d0, #6876ce, #6174cd, #5a71cb, #7b89d3, #9aa2da, #b6bbe1, #d3d5e8);
-    color: black;
-}
-.header{
-    height: 100vh;/*siempre va a ocupar en el alto el 100% de la pantalla donde se encuentra parado*/
+
+body {
+    height: 100vh;
+    /*siempre va a ocupar en el alto el 100% de la pantalla donde se encuentra parado*/
     background-image: url(../assets/img/cielo.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    @media(max-wiidth: 600px)
 }
 
-.contenedorLogo{
+.header {
+    height: 100vh;
+    /*siempre va a ocupar en el alto el 100% de la pantalla donde se encuentra parado*/
+    background-image: url(../assets/img/cielo.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    @media(max-wiidth: 600px)
+}
+
+.contenedorLogo {
     width: 59%;
     display: inline-block;
     padding-top: 20px;
-    
+    @media(max-wiidth: 600px)
 }
 
-.Logo{
+.Logo {
     width: 80%;
-} 
-.navegacion{
+    @media(max-wiidth: 600px)
+}
+
+.navegacion {
     display: inline-block;
     width: 40%;
     text-align: right;
-    
+    @media(max-wiidth: 600px)
+
 }
 
-.listaItem{
+.listaItem {
     list-style: none;
     display: inline-block;
     padding-left: 10px;
     padding-top: o;
+    @media(max-wiidth: 600px)
 }
 
 /*anclas de la navegacion*/
-.linkNav{
+.linkNav {
     text-decoration: none;
     color: black;
     font-size: 1.5rem;
+    @media(max-wiidth: 600px)
 }
 
 /*estilados del titulo principal index*/
-.contenedorTituloheader{
+.contenedorTituloheader {
     width: 50%;
     height: 30vh;
-    margin: 0 auto; /*el primer valor indica para el top y el bottom al mismo tiempo y el segundo indica el left y right*/
+    margin: 0 auto;
+    /*el primer valor indica para el top y el bottom al mismo tiempo y el segundo indica el left y right*/
     background-color: rgba(67, 63, 63, 0.242);
     margin-top: 200px;
     text-align: center;
     backdrop-filter: blur(12px);
+    @media(max-wiidth: 600px)
 
 }
 
-.contenedorTituloheader h1{
+.contenedorTituloheader h1 {
     font-size: 1.4rem;
     padding-top: 10px;
+    @media(max-wiidth: 600px)
 }
 
-.contenedorTituloheader p{
+.contenedorTituloheader p {
     font-size: 1.5rem;
     padding-top: 10px;
+    @media(max-wiidth: 600px)
 }
 
-.main{
+.main {
     height: 100vh;
     margin-bottom: 5vh;
-}
-.marginHr{
-    margin-top: 20px;
-    margin-bottom: 20px;
+    @media(max-wiidth: 600px)
 }
 
-.sectionCards{
+.marginHr {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    @media(max-wiidth: 600px)
+}
+
+.sectionCards {
     text-align: center;
     width: 90%;
     margin: 0 auto;
-    
-    
-}
-.sectionCards h2{
-    font-size: 2rem;
-    padding-bottom: 5vh;
+    @media(max-wiidth: 600px)
+
+
 }
 
-.card{
+.sectionCards h2 {
+    font-size: 2rem;
+    padding-bottom: 5vh;
+    @media(max-wiidth: 600px)
+}
+
+.card {
     margin-top: 14vh;
     width: 30%;
     display: inline-block;
@@ -101,32 +126,38 @@ body{
     -webkit-border-radius: 113px 113px 113px 113px;
     -moz-border-radius: 113px 113px 113px 113px;
     padding: 10px;
+    @media(max-wiidth: 600px)
 }
 
-.card img{
+.card img {
     width: 90%;
     height: 40vh;
     object-fit: cover;
-    
+    @media(max-wiidth: 600px)
+
 }
 
-.footer{
+.footer {
     height: 30vh;
     text-align: center;
+    @media(max-wiidth: 600px)
 }
 
-.footer p{
+.footer p {
     font-size: 1.5rem;
     padding-top: 10px;
+    @media(max-wiidth: 600px)
 }
 
-.linkRedes{
+.linkRedes {
     text-decoration: none;
     padding-left: 20px;
     background-color: red;
+    @media(max-wiidth: 600px)
 }
 
-.icon{
+.icon {
     color: black;
     font-size: 4rem;
+    @media(max-wiidth: 600px)
 }
